crates/jsonschema-macros/tests/ui/invalid_all_of_type.stderr
error: "x" is not of type "array"
 --> tests/ui/invalid_all_of_type.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"allOf":"x"}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
